package com.example.sagivproject.services.impl;

import androidx.annotation.NonNull;
import androidx.annotation.Nullable;

import com.example.sagivproject.models.User;
import com.example.sagivproject.services.IDatabaseService.DatabaseCallback;
import com.example.sagivproject.services.IUserService;
import com.google.firebase.database.DataSnapshot;
import com.google.firebase.database.FirebaseDatabase;

import java.util.List;
import java.util.Objects;

import javax.inject.Inject;

/**
 * Implementation of the {@link IUserService} interface.
 * <p>
 * This class provides concrete methods for performing CRUD operations on user records
 * within the Firebase Realtime Database. It extends {@link BaseDatabaseService} to reuse
 * generic database logic while implementing specific business rules like authentication
 * by credentials and email uniqueness validation.
 * </p>
 */
public class UserServiceImpl extends BaseDatabaseService<User> implements IUserService {
    /**
     * Constructs a new UserServiceImpl.
     * Initializes the base database service with the "users" root path.
     *
     * @param firebaseDatabase The {@link FirebaseDatabase} instance.
     */
    @Inject
    public UserServiceImpl(FirebaseDatabase firebaseDatabase) {
        super(firebaseDatabase, "users", User.class);
    }

    /**
     * Generates a new, unique identifier for a user record.
     *
     * @return A unique user ID string generated by Firebase.
     */
    @Override
    public String generateUserId() {
        return super.generateId();
    }

    /**
     * Creates a new user entry in the database.
     *
     * @param user     The {@link User} object to persist.
     * @param callback Optional callback for operation results.
     */
    @Override
    public void createNewUser(@NonNull User user, @Nullable DatabaseCallback<Void> callback) {
        super.create(user, callback);
    }

    /**
     * Retrieves a single user record by its unique ID.
     *
     * @param uid      The unique identifier of the user.
     * @param callback The callback invoked with the retrieved user object.
     */
    @Override
    public void getUser(@NonNull String uid, @NonNull DatabaseCallback<User> callback) {
        super.get(uid, callback);
    }

    /**
     * Retrieves all user records currently stored in the system.
     *
     * @param callback The callback invoked with the full list of users.
     */
    @Override
    public void getUserList(@NonNull DatabaseCallback<List<User>> callback) {
        super.getAll(callback);
    }

    /**
     * Deletes a specific user record from the database.
     *
     * @param uid      The ID of the user to remove.
     * @param callback Optional callback invoked upon completion.
     */
    @Override
    public void deleteUser(@NonNull String uid, @Nullable DatabaseCallback<Void> callback) {
        super.delete(uid, callback);
    }

    /**
     * Searches for a user whose email and password match the provided credentials.
     * <p>
     * This implementation fetches all users and performs a client-side filter.
     * </p>
     *
     * @param email    Email to match.
     * @param password Password to match.
     * @param callback Callback invoked with the matching user or null.
     */
    @Override
    public void getUserByEmailAndPassword(@NonNull String email, @NonNull String password, @NonNull DatabaseCallback<User> callback) {
        readData("users").orderByChild("email").equalTo(email).get().addOnCompleteListener(task -> {
            if (!task.isSuccessful()) {
                callback.onFailed(task.getException());
                return;
            }
            User found = null;
            for (DataSnapshot snapshot : task.getResult().getChildren()) {
                User u = snapshot.getValue(User.class);
                if (u != null && Objects.equals(u.getPassword(), password)) {
                    found = u;
                    break;
                }
            }
            callback.onCompleted(found);
        });
    }

    /**
     * Checks if a given email is already in use by another user.
     * <p>
     * Uses a server-side query for efficiency.
     * </p>
     *
     * @param email    The email address to check.
     * @param callback Callback invoked with true if the email exists.
     */
    @Override
    public void checkIfEmailExists(@NonNull String email, @NonNull DatabaseCallback<Boolean> callback) {
        readData("users").orderByChild("email").equalTo(email).get().addOnCompleteListener(task -> {
            if (task.isSuccessful()) {
                callback.onCompleted(task.getResult().exists());
            } else {
                callback.onFailed(task.getException());
            }
        });
    }

    /**
     * Overwrites an existing user record with updated data.
     *
     * @param user     The user object containing new data.
     * @param callback Optional callback for result notification.
     */
    @Override
    public void updateUser(@NonNull User user, @Nullable DatabaseCallback<Void> callback) {
        super.update(user.getId(), oldUser -> user, (callback == null) ? null : new DatabaseCallback<>() {
            @Override
            public void onCompleted(User updatedUser) {
                callback.onCompleted(null);
            }

            @Override
            public void onFailed(Exception e) {
                callback.onFailed(e);
            }
        });
    }

    /**
     * Modifies the administrative role of a specific user using an atomic transaction.
     *
     * @param uid      User identifier.
     * @param role     The new {@link User.UserRole} to assign.
     * @param callback Optional callback.
     */
    @Override
    public void updateUserRole(@NonNull String uid, @NonNull User.UserRole role, @Nullable DatabaseCallback<Void> callback) {
        super.update(uid, user -> {
            user.setRole(role);
            return user;
        }, (callback == null) ? null : new DatabaseCallback<>() {
            @Override
            public void onCompleted(User user) {
                callback.onCompleted(null);
            }

            @Override
            public void onFailed(Exception e) {
                callback.onFailed(e);
            }
        });
    }
}