@startuml
class services.impl.UserServiceImpl {
+ String generateUserId()
+ void createNewUser(User,DatabaseCallback<Void>)
+ void getUser(String,DatabaseCallback<User>)
+ void getUserList(DatabaseCallback<List<User>>)
+ void deleteUser(String,DatabaseCallback<Void>)
+ void getUserByEmailAndPassword(String,String,DatabaseCallback<User>)
+ void checkIfEmailExists(String,DatabaseCallback<Boolean>)
+ void updateUser(User,DatabaseCallback<Void>)
+ void updateUserRole(String,User.UserRole,DatabaseCallback<Void>)
}

class services.impl.TipOfTheDayServiceImpl {
- {static} String TIP_OF_THE_DAY_PATH
- CalendarUtil calendarUtil
+ void getTipForToday(IDatabaseService.DatabaseCallback<TipOfTheDay>)
+ void getAllTips(IDatabaseService.DatabaseCallback<List<TipOfTheDay>>)
+ void getTipByDate(String,IDatabaseService.DatabaseCallback<TipOfTheDay>)
+ void saveTipIfNotExists(TipOfTheDay,IDatabaseService.DatabaseCallback<TipOfTheDay>)
+ void saveTip(TipOfTheDay,IDatabaseService.DatabaseCallback<Void>)
+ void deleteTip(String,IDatabaseService.DatabaseCallback<Void>)
}




services.IUserService <|.. services.impl.UserServiceImpl
services.impl.BaseDatabaseService <|-- services.impl.UserServiceImpl
services.ITipOfTheDayService <|.. services.impl.TipOfTheDayServiceImpl
services.impl.BaseDatabaseService <|-- services.impl.TipOfTheDayServiceImpl
@enduml